--- a/src/Ens/JobeetBundle/Resources/views/layout.html.twig
+++ b/src/Ens/JobeetBundle/Resources/views/layout.html.twig
@@ -13,6 +13,7 @@
     {% block javascripts %}
     {% endblock %}
     <link rel="shortcut icon" href="{{ asset('bundles/ensjobeet/images/favicon.ico') }}" />
+    <link rel="alternate" type="application/atom+xml" title="Latest Jobs" href="{{ url('job', {'_format': 'atom'}) }}" />
 </head>
 <body>
 <div id="container">
@@ -43,7 +44,16 @@
             </div>
         </div>
     </div>
-
+    <div id="job_history">
+        Recent viewed jobs:
+        <ul>
+            {% for job in app.session.get('job_history') %}
+                <li>
+                    <a href="{{ path('job_show', { 'id': job.id, 'company': job.companyslug, 'location': job.locationslug, 'position': job.positionslug }) }}">{{ job.position }} - {{job.company }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
     <div id="content">
         {% for flashMessage in app.session.flashbag.get('notice') %}
             <div class="flash_notice">
@@ -73,7 +83,7 @@
           </span>
             <ul>
                 <li><a href="">About Jobeet</a></li>
-                <li class="feed"><a href="">Full feed</a></li>
+                <li class="feed"><a href="{{ path('job', {'_format': 'atom'}) }}">Full feed</a></li>
                 <li><a href="">Jobeet API</a></li>
                 <li class="last"><a href="">Affiliates</a></li>
             </ul>
