--- a/src/Ens/JobeetBundle/Resources/views/Category/show.html.twig
+++ b/src/Ens/JobeetBundle/Resources/views/Category/show.html.twig
@@ -17,41 +17,19 @@
         <h1>{{ category.name }}</h1>
     </div>
 
-    {% include 'EnsJobeetBundle:Job:list.html.twig' with {'jobs': category.activejobs} %}
+    {% include 'EnsJobeetBundle:Job:list.html.twig' with {'jobs': pagination} %}
 
-    {% if lastPage > 1 %}
+    {% if totalPages > 1 %}
         <div class="pagination">
-            <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug, 'page': 1 }) }}">
-                <img src="{{ asset('bundles/ensjobeet/images/first.png') }}" alt="First page" title="First page" />
-            </a>
-
-            <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug, 'page': previousPage }) }}">
-                <img src="{{ asset('bundles/ensjobeet/images/previous.png') }}" alt="Previous page" title="Previous page" />
-            </a>
-
-            {% for page in 1..lastPage %}
-                {% if page == currentPage %}
-                    {{ page }}
-                {% else %}
-                    <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug, 'page': page }) }}">{{ page }}</a>
-                {% endif %}
-            {% endfor %}
-
-            <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug, 'page': nextPage }) }}">
-                <img src="{{ asset('bundles/ensjobeet/images/next.png') }}" alt="Next page" title="Next page" />
-            </a>
-
-            <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug, 'page': lastPage }) }}">
-                <img src="{{ asset('bundles/ensjobeet/images/last.png') }}" alt="Last page" title="Last page" />
-            </a>
+            {{ knp_pagination_render(pagination) }}
         </div>
     {% endif %}
 
     <div class="pagination_desc">
-        <strong>{{ totalJobs }}</strong> jobs in this category
+        <strong>{{ pagination.getTotalItemCount }}</strong> jobs in this category
 
-        {% if lastPage > 1 %}
-            - page <strong>{{ currentPage }}/{{ lastPage }}</strong>
+        {% if totalPages > 1 %}
+            - page <strong>{{ pagination.getCurrentPageNumber }}/{{ totalPages }}</strong>
         {% endif %}
     </div>
 
